Update the assetPath and asset src paths.

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'StateFace';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
-    // src: url('/assets/fonts/StateFace-Regular.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
+    src: url('/assets/fonts/StateFace-Regular.otf');
 }
 
 .state-icon {
