--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,38 +1,38 @@
 @font-face {
     font-family: 'StateFace';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
-    // src: url('/assets/fonts/StateFace-Regular.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
+    src: url('/assets/fonts/StateFace-Regular.otf');
 }
 
 @font-face {
     font-family: 'DIN Pro';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Light.otf');
-    // src: url('/assets/fonts/DINPro Light.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Light.otf');
+    src: url('/assets/fonts/DINPro Light.otf');
     font-weight: 100;
 }
 @font-face {
     font-family: 'DIN Pro';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Regular.otf');
-    // src: url('/assets/fonts/DINPro Regular.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Regular.otf');
+    src: url('/assets/fonts/DINPro Regular.otf');
     font-weight: 400;
 }
 @font-face {
     font-family: 'DIN Pro';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Medium.otf');
-    // src: url('/assets/fonts/DINPro Medium.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Medium.otf');
+    src: url('/assets/fonts/DINPro Medium.otf');
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'DIN Pro';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Bold.otf');
-    // src: url('/assets/fonts/DINPro Bold.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Bold.otf');
+    src: url('/assets/fonts/DINPro Bold.otf');
     font-weight: bold;
 }
 @font-face {
     font-family: 'DIN Pro';
-    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Italic.otf');
-    // src: url('/assets/fonts/DINPro Italic.otf');
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Italic.otf');
+    src: url('/assets/fonts/DINPro Italic.otf');
     font-style: italic;
 }
 
