--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     <div class="stat-box">
       <div class="label">Last Updated:</div>
       <div class="value">{{ data.lastUpdated }}</div>
-      <div class="detail">Updated Weekly</div>
+      <div class="detail">Updated As Data Is Generated</div>
     </div>
 
     <div class="stat-box stat-box-accent flex-col">
