--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     </h1>
 
     <div class="stat-box">
-      <div class="label">Last Updated:</div>
+      <div class="label">Most Recent Data:</div>
       <div class="value">{{ data.lastUpdated }}</div>
       <div class="detail">Updated As Data Is Generated</div>
     </div>
